src/objects/Response_Goals__c.object
<CustomObject>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Response Goals</relationshipLabel>
        <relationshipName>Response_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Response_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Response Goals</label>
    <nameField>
        <label>Response Goals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Response Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>